[workspace]
members = ["crm", "user-stat"]
resolver = "2"


[workspace.dependencies]
anyhow = "1.0.82"
chrono = { version = "0.4.38", features = ["serde"] }
prost = "0.12.4"
prost-build = "0.12.4"
prost-types = "0.12.4"
serde = { version = "1.0.200", features = ["derive"] }
sqlx = { version = "0.7.4", features = [
  "chrono",
  "postgres",
  "runtime-tokio",
  "tls-rustls",
] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
tonic = { version = "0.11.0", features = ["zstd", "tls"] }
tonic-build = "0.11.0"
