[workspace]
members = ["crm", "crm-metadata", "crm-send", "user-stat"]
resolver = "2"


[workspace.dependencies]
anyhow = "1.0.82"
chrono = { version = "0.4.38", features = ["serde"] }
crm-metadata = { path = "crm-metadata" }
crm-send = { path = "crm-send" }
derive_builder = "0.20.0"
futures = "0.3.30"
itertools = "0.12.1"
prost = "0.12.4"
prost-build = "0.12.4"
prost-types = "0.12.4"
proto-builder-trait = "0.6.1"
rand = "0.8.5"
serde = { version = "1.0.200", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.7.4", features = [
  "chrono",
  "postgres",
  "runtime-tokio",
  "tls-rustls",
] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.15"
tonic = { version = "0.11.0", features = ["zstd", "tls"] }
tonic-build = "0.11.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
user-stat = { path = "user-stat" }
