[package]
name = "crm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
crm-metadata = { workspace = true }
crm-send = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
jwt-simple = "0.12.9"
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
user-stat = { workspace = true }
uuid = { version = "1.8.0", features = ["v4"] }

[build-dependencies]
anyhow = { workspace = true }
proto-builder-trait = { workspace = true }
tonic-build = { workspace = true }
