[package]
name = "user-stat"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
derive_builder = "0.20.0"
futures = "0.3.30"
itertools = "0.12.1"
prost = { workspace = true }
prost-types = { workspace = true }
rand = "0.8.5"
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
proto-builder-trait = "0.6.1"
tonic-build = { workspace = true }

[dev-dependencies]
fake = { version = "2.9.2", features = ["derive", "chrono"] }
nanoid = "0.4.0"
